5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2171/executions/1789_1598.log
== TEST (2019-05-29 18:15:07) 
-- CODE:
from math import * 
a = array(["digite o custo :"])
c = 80 - 5
print(a) - [5]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = array(["digite o custo :"])
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:15:31) 
-- CODE:
from math import * 
a = array(eval["digite o custo :"])
c = 80 - 5
print(a) - [5]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = array(eval["digite o custo :"])
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:15:37) 
-- CODE:
from math import * 
a = array(eval["digite o custo :"])
c = 80 - 5
print(a) - [5]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = array(eval["digite o custo :"])
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:15:57) 
-- CODE:
from math import * 
a = array(eval["digite o custo :"])
c = 80 
print(c) - [5]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = array(eval["digite o custo :"])
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:15:57) 
-- CODE:
from math import * 
a = array(eval["digite o custo :"])
c = 80 
print(c) - [5]

-- EXECUTION TIME:
0.109608
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1598/main.py", line 2, in <module>
    a = array(eval["digite o custo :"])
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:15:59) 
-- CODE:
from math import * 
a = array(eval["digite o custo :"])
c = 80 
print(c) - [5]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = array(eval["digite o custo :"])
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:16:39) 
-- CODE:
from math import * 
a = float(int(["digite o custo :"]))
c = 80 
print(c) - [5]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = float(int(["digite o custo :"]))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:16:41) 
-- CODE:
from math import * 
a = float(int(["digite o custo :"]))
c = 80 
print(c) - [5]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = float(int(["digite o custo :"]))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:16:54) 
-- CODE:
from math import * 
a = int(["digite o custo :"])
c = 80 
print(c) - [5]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(["digite o custo :"])
TypeError: int() argument must be a string, a bytes-like object or a number, not 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:17:23) 
-- CODE:
from math import * 
a = array(["digite o custo :"])
c = 80 
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = array(["digite o custo :"])
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:17:48) 
-- CODE:
from math import * 
a = array("digite o custo :")
c = 80 
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = array("digite o custo :")
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:17:56) 
-- CODE:
from math import * 
a = float("digite o custo :")
c = 80 
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = float("digite o custo :")
ValueError: could not convert string to float: 'digite o custo :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:18:09) 
-- CODE:
from math import * 
a = float(int("digite o custo :"))
c = 80 
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = float(int("digite o custo :"))
ValueError: invalid literal for int() with base 10: 'digite o custo :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:18:10) 
-- CODE:
from math import * 
a = float(int("digite o custo :"))
c = 80 
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = float(int("digite o custo :"))
ValueError: invalid literal for int() with base 10: 'digite o custo :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:18:11) 
-- CODE:
from math import * 
a = float(int("digite o custo :"))
c = 80 
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = float(int("digite o custo :"))
ValueError: invalid literal for int() with base 10: 'digite o custo :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:18:13) 
-- CODE:
from math import * 
a = float(int("digite o custo :"))
c = 80 
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = float(int("digite o custo :"))
ValueError: invalid literal for int() with base 10: 'digite o custo :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:18:16) 
-- CODE:
from math import * 
a = float(int("digite o custo :"))
c = 80 
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = float(int("digite o custo :"))
ValueError: invalid literal for int() with base 10: 'digite o custo :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:18:22) 
-- CODE:
from math import * 
a = float(int("digite o custo :"))
c = 80 
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = float(int("digite o custo :"))
ValueError: invalid literal for int() with base 10: 'digite o custo :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:18:23) 
-- CODE:
from math import * 
a = float(int("digite o custo :"))
c = 80 
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = float(int("digite o custo :"))
ValueError: invalid literal for int() with base 10: 'digite o custo :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:19:34) 
-- CODE:
from math import * 
a = float(int("vetor de custo :"))
c =
-- ERROR:
File "XXXX", line 3
    c =
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:19:38) 
-- CODE:
from math import * 
a = float(int("vetor de custo :"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = float(int("vetor de custo :"))
ValueError: invalid literal for int() with base 10: 'vetor de custo :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:19:52) 
-- CODE:
from math import * 
a = float(("vetor de custo :"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = float(("vetor de custo :"))
ValueError: could not convert string to float: 'vetor de custo :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:20:07) 
-- CODE:
from math import * 
a = array("vetor de custo :")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = array("vetor de custo :")
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:20:25) 
-- CODE:
from math import * 
a = array(eval("vetor de custo :"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = array(eval("vetor de custo :"))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:20:50) 
-- CODE:
from math import * 
a = eval("vetor de custo :")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = eval("vetor de custo :")
  File "<string>", line 1
    vetor de custo :
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:20:53) 
-- CODE:
from math import * 
a = eval("vetor de custo :")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = eval("vetor de custo :")
  File "<string>", line 1
    vetor de custo :
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:22:27) 
-- CODE:
a = float(int("vetor de custo :"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(int("vetor de custo :"))
ValueError: invalid literal for int() with base 10: 'vetor de custo :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:22:31) 
-- CODE:
a = float(int("vetor de custo :"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(int("vetor de custo :"))
ValueError: invalid literal for int() with base 10: 'vetor de custo :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:22:43) 
-- CODE:
a = float(input("vetor de custo :"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input())
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:23:43) 
-- CODE:
a = float(input(["vetor de custo :"]))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input(["vetor de custo :"]))
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:23:51) 
-- CODE:
a = float(input(["vetor de custo :"]))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input(["vetor de custo :"]))
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:24:02) 
-- CODE:
a = float(input(["digite vetor de custo :"]))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input(["digite vetor de custo :"]))
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:24:10) 
-- CODE:
a = float(input(["digite vetor de custo :"]))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input(["digite vetor de custo :"]))
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:26:33) 
-- CODE:
a = array(input(["digite vetor de custo :"]))
b = array(input(["custo total da compra :"]))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = array(input(["digite vetor de custo :"]))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:27:20) 
-- CODE:
a = float(input(["digite vetor de custo :"]))
b = float(input(["custo total da compra :"]))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input(["digite vetor de custo :"]))
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:28:33) 
-- CODE:
a = float(input(["digite vetor de custo :"]))
v = {80 - 5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input(["digite vetor de custo :"]))
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:28:54) 
-- CODE:
a = float(input(["digite vetor de custo :"]))
v = {80 - 5}
print(a ,2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input(["digite vetor de custo :"]))
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:29:28) 
-- CODE:
a = float(input(["digite vetor de custo :"]))
v = 80 
print(a ,2) + {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input(["digite vetor de custo :"]))
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:29:33) 
-- CODE:
a = float(input(["digite vetor de custo :"]))
v = 80 
print(a ,2)  {5}


-- ERROR:
File "XXXX", line 3
    print(a ,2)  {5}
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:29:37) 
-- CODE:
a = float(input(["digite vetor de custo :"]))
v = 80 
print(a ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input(["digite vetor de custo :"]))
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:46) 
-- CODE:
a = float(input(eval["digite vetor de custo :"]))
v = 80 
print(a ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input(eval["digite vetor de custo :"]))
TypeError: 'builtin_function_or_method' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:47) 
-- CODE:
a = float(input(eval["digite vetor de custo :"]))
v = 80 
print(a ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input(eval["digite vetor de custo :"]))
TypeError: 'builtin_function_or_method' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:48) 
-- CODE:
a = float(input(eval["digite vetor de custo :"]))
v = 80 
print(a ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input(eval["digite vetor de custo :"]))
TypeError: 'builtin_function_or_method' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:57) 
-- CODE:
a = array(input(eval["digite vetor de custo :"]))
v = 80 
print(a ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = array(input(eval["digite vetor de custo :"]))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:58) 
-- CODE:
a = array(input(eval["digite vetor de custo :"]))
v = 80 
print(a ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = array(input(eval["digite vetor de custo :"]))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:31:21) 
-- CODE:
vetor = array(input(eval["digite vetor de custo :"]))
v = 80 
print(a ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor = array(input(eval["digite vetor de custo :"]))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:31:57) 
-- CODE:
vetor = array(input(eval("digite vetor de custo :")))
v = 80 
print(a ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor = array(input(eval("digite vetor de custo :")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:32:14) 
-- CODE:
vetor = array(input(eval("digite vetor de custo :")))
v = 80 
print(vetor ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor = array(input(eval("digite vetor de custo :")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:32:16) 
-- CODE:
vetor = array(input(eval("digite vetor de custo :")))
v = 80 
print(vetor ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor = array(input(eval("digite vetor de custo :")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:03) 
-- CODE:
vetor = array(numpy(eval("digite vetor de custo :")))
v = 80 
print(vetor ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor = array(numpy(eval("digite vetor de custo :")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:04) 
-- CODE:
vetor = array(numpy(eval("digite vetor de custo :")))
v = 80 
print(vetor ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor = array(numpy(eval("digite vetor de custo :")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:10) 
-- CODE:
vetor = array(numpy(eval("digite vetor de custo :")))
v = 80 
print(vetor ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor = array(numpy(eval("digite vetor de custo :")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:11) 
-- CODE:
vetor = array(numpy(eval("digite vetor de custo :")))
v = 80 
print(vetor ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor = array(numpy(eval("digite vetor de custo :")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:36:13) 
-- CODE:
vetor = array(numpy(eval("digite vetor de custo :")))
v = 80 
print(vetor ,2) - {5}


-- EXECUTION TIME:
0.119466
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1598/main.py", line 1, in <module>
    vetor = array(numpy(eval("digite vetor de custo :")))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:14) 
-- CODE:
vetor = array(numpy(eval("digite vetor de custo :")))
v = 80 
print(vetor ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor = array(numpy(eval("digite vetor de custo :")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:16) 
-- CODE:
vetor = array(numpy(("digite vetor de custo :")))
v = 80 
print(vetor ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor = array(numpy(("digite vetor de custo :")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:25) 
-- CODE:
vetor = float(numpy(("digite vetor de custo :")))
v = 80 
print(vetor ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor = float(numpy(("digite vetor de custo :")))
NameError: name 'numpy' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:27) 
-- CODE:
vetor = float(numpy(("digite vetor de custo :")))
v = 80 
print(vetor ,2) - {5}


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor = float(numpy(("digite vetor de custo :")))
NameError: name 'numpy' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:06) 
-- CODE:
v1 = float(numpy(("digite vetor de custo :")))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = float(numpy(("digite vetor de custo :")))
NameError: name 'numpy' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:08) 
-- CODE:
v1 = float(numpy(("digite vetor de custo :")))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = float(numpy(("digite vetor de custo :")))
NameError: name 'numpy' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:09) 
-- CODE:
v1 = float(numpy(("digite vetor de custo :")))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = float(numpy(("digite vetor de custo :")))
NameError: name 'numpy' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:18) 
-- CODE:
v1 = float(input(("digite vetor de custo :")))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = float(input(("digite vetor de custo :")))
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:48:27) 
-- CODE:
v1 = float(input("digite vetor de custo :"))
v2 = float(input("custo total de compra : "))
compra = 80 - 5 
print(v1) - {80 - 5}




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = float(input())
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:48:30) 
-- CODE:
v1 = float(input("digite vetor de custo :"))
v2 = float(input("custo total de compra : "))
compra = 80 - 5 
print(v1) - {80 - 5}




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = float(input())
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:48:57) 
-- CODE:
v1 = float(input("digite vetor de custo :"))
v2 = float(input("custo total de compra : "))
compra = 80 - 5 
print(v1) - {80 - 5}
print(v2 , 2)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = float(input())
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:51:06) 
-- CODE:
v1 = float(input["digite vetor de custo :"])
v2 = float(input["custo total de compra : "])
compra = 80 - 5 
print(v1) - [80 - 5]
print(v2 , 2)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = float(input["digite vetor de custo :"])
TypeError: 'builtin_function_or_method' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:51:08) 
-- CODE:
v1 = float(input["digite vetor de custo :"])
v2 = float(input["custo total de compra : "])
compra = 80 - 5 
print(v1) - [80 - 5]
print(v2 , 2)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = float(input["digite vetor de custo :"])
TypeError: 'builtin_function_or_method' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
